.opsera-event-genie/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: event-genie-dev
  labels:
    app: event-genie
    environment: dev
