.opsera-event-genie/k8s/overlays/dev/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-genie
spec:
  replicas: 1
